// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test render initial index 1`] = `
"<div class=\\"var-swipe\\" style=\\"width: 100px; height: 100px;\\">
  <div class=\\"var-swipe__track\\" style=\\"width: 300px; transform: translateX(-200px); transition-duration: 0ms;\\">
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">1</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">2</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">3</div>
  </div>
  <div class=\\"var-swipe__indicators\\">
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator var-swipe--indicator-active\\"></div>
  </div>
</div>"
`;

exports[`test swipe example 1`] = `
"<div class=\\"app-type\\">基本使用</div>
<div class=\\"var-swipe swipe\\">
  <div class=\\"var-swipe__track\\" style=\\"width: 0px; transform: translateX(0px); transition-duration: 0ms;\\">
    <div class=\\"var-swipe-item\\" style=\\"width: 0px; transform: translateX(0px);\\"><img class=\\"swipe-item\\" src=\\"https://varlet.gitee.io/varlet-ui/cat.jpg\\" alt=\\"\\"></div>
    <div class=\\"var-swipe-item\\" style=\\"width: 0px; transform: translateX(0px);\\"><img class=\\"swipe-item\\" src=\\"https://varlet.gitee.io/varlet-ui/cat2.jpg\\" alt=\\"\\"></div>
    <div class=\\"var-swipe-item\\" style=\\"width: 0px; transform: translateX(0px);\\"><img class=\\"swipe-item\\" src=\\"https://varlet.gitee.io/varlet-ui/cat3.jpg\\" alt=\\"\\"></div>
  </div>
  <div class=\\"var-swipe__indicators\\">
    <div class=\\"var-swipe__indicator var-swipe--indicator-active\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
  </div>
</div>
<div class=\\"app-type\\">禁止循环轮播</div>
<div class=\\"var-swipe swipe\\">
  <div class=\\"var-swipe__track\\" style=\\"width: 0px; transform: translateX(0px); transition-duration: 0ms;\\">
    <div class=\\"var-swipe-item\\" style=\\"width: 0px; transform: translateX(0px);\\"><img class=\\"swipe-item\\" src=\\"https://varlet.gitee.io/varlet-ui/cat.jpg\\" alt=\\"\\"></div>
    <div class=\\"var-swipe-item\\" style=\\"width: 0px; transform: translateX(0px);\\"><img class=\\"swipe-item\\" src=\\"https://varlet.gitee.io/varlet-ui/cat2.jpg\\" alt=\\"\\"></div>
    <div class=\\"var-swipe-item\\" style=\\"width: 0px; transform: translateX(0px);\\"><img class=\\"swipe-item\\" src=\\"https://varlet.gitee.io/varlet-ui/cat3.jpg\\" alt=\\"\\"></div>
  </div>
  <div class=\\"var-swipe__indicators\\">
    <div class=\\"var-swipe__indicator var-swipe--indicator-active\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
  </div>
</div>
<div class=\\"app-type\\">开启自动播放</div>
<div class=\\"var-swipe swipe\\">
  <div class=\\"var-swipe__track\\" style=\\"width: 0px; transform: translateX(0px); transition-duration: 0ms;\\">
    <div class=\\"var-swipe-item\\" style=\\"width: 0px; transform: translateX(0px);\\"><img class=\\"swipe-item\\" src=\\"https://varlet.gitee.io/varlet-ui/cat.jpg\\" alt=\\"\\"></div>
    <div class=\\"var-swipe-item\\" style=\\"width: 0px; transform: translateX(0px);\\"><img class=\\"swipe-item\\" src=\\"https://varlet.gitee.io/varlet-ui/cat2.jpg\\" alt=\\"\\"></div>
    <div class=\\"var-swipe-item\\" style=\\"width: 0px; transform: translateX(0px);\\"><img class=\\"swipe-item\\" src=\\"https://varlet.gitee.io/varlet-ui/cat3.jpg\\" alt=\\"\\"></div>
  </div>
  <div class=\\"var-swipe__indicators\\">
    <div class=\\"var-swipe__indicator var-swipe--indicator-active\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
  </div>
</div>
<div class=\\"app-type\\">垂直轮播</div>
<div class=\\"var-swipe swipe\\">
  <div class=\\"var-swipe__track var-swipe--vertical\\" style=\\"height: 0px; transform: translateY(0px); transition-duration: 0ms;\\">
    <div class=\\"var-swipe-item\\" style=\\"height: 0px; transform: translateY(0px);\\"><img class=\\"swipe-item\\" src=\\"https://varlet.gitee.io/varlet-ui/cat.jpg\\" alt=\\"\\"></div>
    <div class=\\"var-swipe-item\\" style=\\"height: 0px; transform: translateY(0px);\\"><img class=\\"swipe-item\\" src=\\"https://varlet.gitee.io/varlet-ui/cat2.jpg\\" alt=\\"\\"></div>
    <div class=\\"var-swipe-item\\" style=\\"height: 0px; transform: translateY(0px);\\"><img class=\\"swipe-item\\" src=\\"https://varlet.gitee.io/varlet-ui/cat3.jpg\\" alt=\\"\\"></div>
  </div>
  <div class=\\"var-swipe__indicators var-swipe--indicators-vertical\\">
    <div class=\\"var-swipe__indicator var-swipe--indicator-active var-swipe--indicator-vertical\\"></div>
    <div class=\\"var-swipe__indicator var-swipe--indicator-vertical\\"></div>
    <div class=\\"var-swipe__indicator var-swipe--indicator-vertical\\"></div>
  </div>
</div>
<div class=\\"app-type\\">监听切换</div>
<div class=\\"var-swipe swipe\\">
  <div class=\\"var-swipe__track\\" style=\\"width: 0px; transform: translateX(0px); transition-duration: 0ms;\\">
    <div class=\\"var-swipe-item\\" style=\\"width: 0px; transform: translateX(0px);\\"><img class=\\"swipe-item\\" src=\\"https://varlet.gitee.io/varlet-ui/cat.jpg\\" alt=\\"\\"></div>
    <div class=\\"var-swipe-item\\" style=\\"width: 0px; transform: translateX(0px);\\"><img class=\\"swipe-item\\" src=\\"https://varlet.gitee.io/varlet-ui/cat2.jpg\\" alt=\\"\\"></div>
    <div class=\\"var-swipe-item\\" style=\\"width: 0px; transform: translateX(0px);\\"><img class=\\"swipe-item\\" src=\\"https://varlet.gitee.io/varlet-ui/cat3.jpg\\" alt=\\"\\"></div>
  </div>
  <div class=\\"var-swipe__indicators\\">
    <div class=\\"var-swipe__indicator var-swipe--indicator-active\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
  </div>
</div>
<div class=\\"app-type\\">自定义指示器</div>
<div class=\\"var-swipe swipe\\">
  <div class=\\"var-swipe__track\\" style=\\"width: 0px; transform: translateX(0px); transition-duration: 0ms;\\">
    <div class=\\"var-swipe-item\\" style=\\"width: 0px; transform: translateX(0px);\\"><img class=\\"swipe-item\\" src=\\"https://varlet.gitee.io/varlet-ui/cat.jpg\\" alt=\\"\\"></div>
    <div class=\\"var-swipe-item\\" style=\\"width: 0px; transform: translateX(0px);\\"><img class=\\"swipe-item\\" src=\\"https://varlet.gitee.io/varlet-ui/cat2.jpg\\" alt=\\"\\"></div>
    <div class=\\"var-swipe-item\\" style=\\"width: 0px; transform: translateX(0px);\\"><img class=\\"swipe-item\\" src=\\"https://varlet.gitee.io/varlet-ui/cat3.jpg\\" alt=\\"\\"></div>
  </div>
  <div class=\\"indicators\\">1 / 3</div>
</div>
<div class=\\"space\\"></div>"
`;

exports[`test swipe next & prev & to method 1`] = `
"<div class=\\"var-swipe\\" style=\\"width: 100px; height: 100px;\\">
  <div class=\\"var-swipe__track\\" style=\\"width: 300px; transform: translateX(0px); transition-duration: 300ms;\\">
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">1</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">2</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">3</div>
  </div>
  <div class=\\"var-swipe__indicators\\">
    <div class=\\"var-swipe__indicator var-swipe--indicator-active\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
  </div>
</div>"
`;

exports[`test swipe next & prev & to method 2`] = `
"<div class=\\"var-swipe\\" style=\\"width: 100px; height: 100px;\\">
  <div class=\\"var-swipe__track\\" style=\\"width: 300px; transform: translateX(-100px); transition-duration: 300ms;\\">
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">1</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">2</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">3</div>
  </div>
  <div class=\\"var-swipe__indicators\\">
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator var-swipe--indicator-active\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
  </div>
</div>"
`;

exports[`test swipe next & prev & to method 3`] = `
"<div class=\\"var-swipe\\" style=\\"width: 100px; height: 100px;\\">
  <div class=\\"var-swipe__track\\" style=\\"width: 300px; transform: translateX(0px); transition-duration: 300ms;\\">
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">1</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">2</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">3</div>
  </div>
  <div class=\\"var-swipe__indicators\\">
    <div class=\\"var-swipe__indicator var-swipe--indicator-active\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
  </div>
</div>"
`;

exports[`test swipe next & prev & to method 4`] = `
"<div class=\\"var-swipe\\" style=\\"width: 100px; height: 100px;\\">
  <div class=\\"var-swipe__track\\" style=\\"width: 300px; transform: translateX(-200px); transition-duration: 300ms;\\">
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">1</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">2</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">3</div>
  </div>
  <div class=\\"var-swipe__indicators\\">
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator var-swipe--indicator-active\\"></div>
  </div>
</div>"
`;

exports[`test swipe next & prev & to method 5`] = `
"<div class=\\"var-swipe\\" style=\\"width: 100px; height: 100px;\\">
  <div class=\\"var-swipe__track\\" style=\\"width: 300px; transform: translateX(-300px); transition-duration: 300ms;\\">
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(300px);\\">1</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">2</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">3</div>
  </div>
  <div class=\\"var-swipe__indicators\\">
    <div class=\\"var-swipe__indicator var-swipe--indicator-active\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
  </div>
</div>"
`;

exports[`test swipe next & prev & to method 6`] = `
"<div class=\\"var-swipe\\" style=\\"width: 100px; height: 100px;\\">
  <div class=\\"var-swipe__track\\" style=\\"width: 300px; transform: translateX(100px); transition-duration: 300ms;\\">
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">1</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(0px);\\">2</div>
    <div class=\\"var-swipe-item\\" style=\\"width: 100px; transform: translateX(-300px);\\">3</div>
  </div>
  <div class=\\"var-swipe__indicators\\">
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator\\"></div>
    <div class=\\"var-swipe__indicator var-swipe--indicator-active\\"></div>
  </div>
</div>"
`;
